--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,10 @@ buildNumber.properties
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+
+git config --global user.name "TheWorld17"
+git config --global user.email "broroman8@gmail.com" 
+
+git remote add origin https://github.com/TheWorld17/BMI-APP.git
+git branch -M main
+git push -u origin main
